--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/amit221/interface.git"
+    "url": "git+https://github.com/amit221/es6-interface.git"
   },
   "keywords": [
     "es6",
