--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "es6-interface",
-  "version": "3.0.8",
+  "version": "3.0.9",
   "description": "this module helps you build interfaces for es6 class",
   "main": "interface.js",
   "dependencies": {},
   "devDependencies": {
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   },
   "scripts": {
     "test": "mocha --timeout 10000"
